Fixed overlapping of sound page with sidebar (#965)

--- a/src/components/SettingsComponents/Sounds/index.css
+++ b/src/components/SettingsComponents/Sounds/index.css
@@ -71,3 +71,22 @@
   top: 10px;
   right: 10px;
 }
+
+
+@media only screen and (max-width: 1400px) {
+  .sounds-setting-sub-container {
+    margin-left: 160px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .sounds-setting-sub-container {
+    margin-inline: 20px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .sounds-setting-sub-container {
+    margin-top: 80px;
+  }
+}
